test/v3/fail/match07.v3
//@seman = DuplicateCase @ 7:15

class switch07 {
    
    method testm(a: int) {
        match ( a ) {
            2: ;
	    1 + 1: ;
        }
    }
}
